--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "@vitejs/plugin-vue": "^6.0.1",
     "gh-pages": "^6.3.0",
     "vite": "^7.1.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
